mailhog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  type: ClusterIP
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      protocol: TCP
      targetPort: 1025
    - name: http
      port: 8025
      protocol: TCP
      targetPort: 8025
